Adding br bitween links

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <bod>
-        <a href="/amazonClone/">Amazon Clone</a>
-        <a href="/miniproject/">Mini Project</a>
-        <a href="/myPortfolio/">My Portfolio</a>
+        <a href="/amazonClone/">Amazon Clone</a> <br/>
+        <a href="/miniproject/">Mini Project</a> <br/>
+        <a href="/myPortfolio/">My Portfolio</a> <br/>
         <a href="/registraion-form/">registraion-form</a>
     </bod>
 </html>
