update  hyperlink registration form

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <a href="./amazonClone/">Amazon Clone</a> <br/>
         <a href="/webDev/miniproject/">Mini Project</a> <br/>
         <a href="./myPortfolio/">My Portfolio</a> <br/>
-        <a href="./registraion-form/">registraion-form</a>
+        <a href="./registration-form/">registration-form</a>
     </bod>
 </html>
